== Change log

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/[Keep a Changelog]
and this project adheres to http://semver.org/[Semantic Versioning].

=== [UNRELEASED]

=== [2.1.0] - 2018-02-14
==== Added
* `impl FromRawHandle` for `COMPort`

==== Changed
* Specific IO-related errors are now returned instead of mapping every IO
  error to Unknown. This makes it possible to catch things like time-out
  errors.
* Changed all baud rates to be reported as the discrete `BaudRate::Baud*` types
  rather than as the `BaudRate::BaudOther(*)` type.

==== Fixed
* Modem-type USB serial devices are now enumerated on OS X. This now allows
  connected Arduinos to be detected.
* Compilation on FreeBSD and NetBSD was fixed by removing the 921600 baud rates.
  These will be re-added in a future release.

=== [2.0.0] - 2017-12-18
==== Added
* USB device information is now returned in calls to `available_ports()`
* Serial port enumeration is now supported on Mac
* Serial port enumeration now attempts to return the interface used for the
  port (USB, PCI, Bluetooth, Unknown).
* `BaudRate::standard_rates()` provides a vector of cross-platform baud rates.
* `SerialPort` trait is now `Send`

==== Changed
* Software license has changed from LGPLv3+ to MPL-2.0. This makes it
  possible to use this library in any Rust project if it's unmodified.
* Mac is now a Tier 2 supported platform
* Removed `BaudRate::from_speed(usize)` and `BaudRate::speed -> usize` in favor
  of the `From<u32>` and `Into<u32>` traits.
* Removed `available_baud_rates` in favor of `BaudRate::platform_rates()` as
  this has a more clear semantic meaning. The returned list of baud rates is
  now also correct for all supported platforms.
* Removed `termios` dependency in favor of `nix`. This is a big step towards
  supporting additional platforms.

==== Fixed
* Stop bits are now specified properly (had been reversed). Thanks to
  @serviushack (MR#9)